# Snake

./: CMakeLists.txt  main.cpp
src/: snake.cpp  snake.h
